@startuml
!include diameter/service.puml
package DiamTelecom {
    class Subscriber <<DiamTelecom>> {
        id
        msisdn
        imsi
        ' gx_sessions: GxSessions
        ' sy_sessions: SySessions
        ' rx_sessions: RxSessions
    }

    class Subscribers <<DiamTelecom>> {
    }

    Subscribers o-- Subscriber

    class Carrier <<DiamTelecom>> {
        id
        name
        subscribers: Subscribers
        data_service: DataService
        voice_service: VoiceService

    }

    Carrier *-- Subscribers
    Carrier *-- DataService
    Carrier *-- VoiceService

    class Carriers <<DiamTelecom>> {
    }

    Carriers *-- Carrier

    DiameterSession o-- Subscriber


}
@enduml
